# python-project-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-ql.yml  docker-build.yml  documentation.yml  pre-commit.yml  pypi-publish.yml  python-build.yml
docs/: about.md  installation.md  interface.md  usage.md
